kubernetes/ingress/ingress-example-without-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: service1
            port: 
              number: 80
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: service2
            port: 
              number: 80
